  - Removed old VALIAS ifdefs in dotqmail2valias
  - Updated dotqmail2valias to check if backend module provides native valias support
  - Added vpopmail version output to vconfig
  - Updated library and include path detection for MySQL and LDAP
  - Updated version definition strings
  - Updated vconfig output not to terminate with spaces
  - Added group.h to install headers

  Manvendra Bhangui <mbhangui@users.sourceforge.net>
  - Added vmoddomain

  Luis Felipe Silveira da Silva <felipe@bsd.com.br>
  - Updated to provide maildrop flag in vlimits MySQL

  aledr <matrixworkstation@gmail.com>
  - Fixed input formatting in vpopmaild
  - Fixed bounds issue in vdelivermail
  - Updated MySQL module to use "INSERT INTO .. ON DUPLICATE KEY UPDATE" instead of "REPLACE INTO"
  - Fixed overflow in PostgreSQL module
  - Updated MySQL queries to use uppercase characters for SQL syntax

5.4.28 - Released 10-Mar-2009
   Matt Brookings
   - Updated vlimits_read_vlimits_file to be much more efficient
   - Added vusage client API to libvpopmail
   - Added vusage daemon
   - Updated quota code to talk to vusage daemon if available
   - Fixed some backfill patch compilation issues
   - Updated maildir_to_email to support paths that end in /Maildir as well as /Maildir/
   - Added LDAP valias support
   - Updated vusage API to return counts for both users and domains
   - Updated domain quota enforcement to work when using vusage
   - Re-enabled --enable-domainquotas (with warnings)

5.4.27 - Released 16-Jan-2009
	Jeremy Kister, Rick Widmer, Tom Collins
	- Solaris doesn't like setenv

	Michael Johnson, Steve Cole, dhaval, Rick Widmer
	- Another attempt at maildirquota

        Harmut Wernisch, Tom Collins
	- Fix mixed up usage of MYSQL_UPDATE_* and MYSQL_READ_* in vmysql.c:load_connection_info()
	This may need a tracker number attached.  I can't find it.

    Manvendra Bhangui
	- Added authvchkpw module for Courier-IMAP
	- Added backfill patch [2507177]

5.4.26 - Released 3-Nov-2007