@@ -100,3 +100,15 @@ Polling:
    */
 
    Age Factor = 2;
+   
+   /*
+	  Maximum time in which to wait to poll a user for changes
+   */
+
+   Maximum age = 600;
+
+   /*
+	  How much to age next directory poll time per day a user hasn't authenticated
+   */
+
+   Day age = 10;
